Removed module constraint from protoc tool Fixed type specific fields for protobuf encoder